<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/headline_vertical_margin"
                android:text="@string/prompt_confirm_identity"
                style="@style/AppText.Display" />

            <ImageView
                android:layout_width="@dimen/avatar_image_size"
                android:layout_height="@dimen/avatar_image_size"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/headline_vertical_margin"
                android:src="@drawable/vendor_avatar" />

            <TextView
                android:id="@+id/prompt_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/headline_leading"
                android:text="@string/placeholder_user_id"
                style="@style/AppText.Headline" />

            <TextView
                android:id="@+id/prompt_ticket_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/placeholder_ticket_type"
                style="@style/AppText.Subhead" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/report_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_report"
            android:onClick="onReportButtonClicked"
            style="?android:buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_confirm"
            android:onClick="onConfirmButtonClicked"
            style="?android:buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_done"
            android:onClick="onDoneButtonClicked"
            android:visibility="gone"
            style="?android:buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>
